--- a/paper/main.tex
+++ b/paper/main.tex
@@ -99,8 +99,7 @@ Acceptance to publication
 % \listofchanges[style=list, title=Changes]
 \listoftodos
 \input{incl_intro}
-% \input{incl_model}
-\input{incl_model2}
+\input{incl_model}
 \input{incl_numerics}
 \input{incl_conclusion}
 
