--- a/paper/main.tex
+++ b/paper/main.tex
@@ -41,7 +41,9 @@
 \def\eps{\varepsilon}
 \usepackage[inline]{showlabels}
 % Document title, authors, and affiliations
-\title{Navigating Among Local Minima via Numerical Optimization // STABILITY}
+\title{
+    % Navigating Among Local Minima via Numerical Optimization // \\ 
+Navigating with Stabilty: Local Minima, Patterns, and Evolution in a 1D Fracture Model}
 \author[1]{M. M. Terzi}
 \author[1,2]{O. U. Salman}
 \author[1]{D. Faurie}
