--- a/paper/incl_conclusion.tex
+++ b/paper/incl_conclusion.tex
@@ -9,12 +9,12 @@ In practice, without such information, critical loads for equilibrium transition
 % }
 % 
 % -------
-\begin{figure}[htbp]
-    \centering
-    \includegraphics*[width=.7\textwidth]{../images/irreversibility_inf_eig.png}
-    \caption{\footnotesize{ \textcolor{blue}{LABELS ON AXIS} Stability of the homogeneous solution in the first model on (a) the linear space and (b) on convex cone $K^+_0$. When the irreversibility constraint is present, the homogeneous solution is stable for any value of the loading parameter $\bar\epsilon$.}}
-    \label{fig:shouldnt}
-\end{figure}
+% \begin{figure}[htbp]
+%     \centering
+%     \includegraphics*[width=.7\textwidth]{../images/irreversibility_inf_eig.png}
+%     \caption{\footnotesize{ \textcolor{blue}{LABELS ON AXIS} Stability of the homogeneous solution in the first model on (a) the linear space and (b) on convex cone $K^+_0$. When the irreversibility constraint is present, the homogeneous solution is stable for any value of the loading parameter $\bar\epsilon$.}}
+%     \label{fig:shouldnt}
+% \end{figure}
 
 
 Our evidence is that certain numerical methods can introduce non-physical artifacts which should be distinguished from genuine physical phenomena. Our ongoing work aims to refine numerical techniques to provide more reliable algorithms for analysing irreversible processes in variational evolutionary problems with multiple local minima and a high number of degrees of freedom.
@@ -42,7 +42,7 @@ Suggesting that state transitions in complex scenarios should be carefully inter
 
 In either case, our computations show that, unless second order analysis is performed, observed nucleations are not \emph{necessarily} indicative of physical cracks but rather of an interplay between purely \comment[id={OUS}]{add references}  \textcolor{blue}{physical} phenomena, inherent to the nature of natural processes, and numerical biases inherent to the computational methods employed. This distinction is crucial for understanding the limitations and proper application of numerical techniques as predictive tools in contexts where cracks are a real concern for structures.
 
-Future work will include a more detailed exploration of evolutionary algorithms and their implementation for stability analysis of fracture in thin films. Some notable instances are craquelures artistic paintings,  brittle stability of the cryosphere and crack-pattern selection in metallic thin films~\cite{Faurie2019-to}. \comment[id={OUS}]{add references} \textcolor{blue}{As understood in this work, the final crack patterns depend heavily on the form of the selected unstable mode. In turn, the irreversibility constraint, primarily implemented to prevent crack closure, directly impacts the stability of solutions and mode selection. Therefore, our findings suggest that the success of the phase-field model in predicting crack patterns in thin films relies on the use of robust numerical algorithms.}
+Future work will include a more detailed exploration of evolutionary algorithms and their implementation for stability analysis of fracture in thin films. Some notable instances are craquelures artistic paintings~\cite{fuster-lopez:2020-picassos, Bosco:2020aa,Bosco:2021},  brittle stability of the cryosphere~\cite{weiss:2017-linking, tollefson:2017-giant, Sun:2023aa, Millan:2023aa} and crack-pattern selection in metallic thin films~\cite{Faurie2019-to}. \comment[id={OUS}]{add references} \textcolor{blue}{As understood in this work, the final crack patterns depend heavily on the form of the selected unstable mode. In turn, the irreversibility constraint, primarily implemented to prevent crack closure, directly impacts the stability of solutions and mode selection. Therefore, our findings suggest that the success of the phase-field model in predicting crack patterns in thin films relies on the use of robust numerical algorithms.}
 
 % PERFORMING AN THOROUGH characterisation of bifurcation points, conditions for stability exchange, local features of the energy landscape, qualitative features of constrained systems with respect to canonical representations of bifurcations, thorough TECHNIQUES OF energy blow up and reduction at bifurcation points.
 
