--- a/paper/incl_numerics.tex
+++ b/paper/incl_numerics.tex
@@ -88,8 +88,8 @@ Equilibrium branches for phase-field thin film model of an elastic membrane on a
 
 We display the equilibrium branches that solve the nonlinear equations~\ref{auto1} in Fig. \ref{fig:branches-stiff}. These branches are represented in Figure~\ref{fig:branches-compliant} by plotting the energy difference $\Delta \Psi$ between the energy of the current solution and the energy of the homogeneous solution $\Psi_h(\bar{\epsilon_t})$ at the current value of the loading parameter $\bar\epsilon_t$. The stability of solutions is color-coded, light blue and orange representing stable and unstable solutions, respectively. Stability is discerned through numerical evaluation of the smallest eigenvalue $\lambda_t$ of the stiffness matrix $\stiffmat$ (and $\stiffmatcompl$) defined in \eqref{eq:stifness1} (respectively, in \eqref{eq:stifness2}). Eigenvalues represent the local curvatures of the energy functional, so the sign of the smallest  $\lambda_t$ determines the stability of the solution, with $\lambda_t > 0$ indicating stability and $\lambda_t < 0$ indicating instability.
 
-Under the LEM protocol, the system explores the fundamental branch where the homogeneous solution is stable until  \comment[id={OUS}]{we defined $\bar\epsilon^*$ before }
-$\bar\epsilon_1=\bar\epsilon^*$, identified using linear stability analysis, see Figure~\ref{fig:branches-stiff}. At the critical load on the homogeneous branch  at point $H$, a first instability determines a branch switching transition, from the trivial branch with $n = 0$ to the nontrivial equilibrium branch with $n = 3$. The ensuing non-homogeneous configuration is linearly stable, as seen in Fig. \ref{fig:branches-stiff}. We depict the lowest energy configuration on this equilibrium branch in Fig.~\ref{fig:branches-stiff} at point $A$, consisting of two simultaneously nucleated localized cracks, one inside the domain and one on the boundary. 
+Under the LEM protocol, the system explores the fundamental branch where the homogeneous solution is stable until 
+$\bar\epsilon^c_1$, identified using linear stability analysis, see Figure~\ref{fig:branches-stiff}. At the critical load on the homogeneous branch  at point $H$, a first instability determines a branch switching transition, from the trivial branch with $n = 0$ to the nontrivial equilibrium branch with $n = 3$. The ensuing non-homogeneous configuration is linearly stable, as seen in Fig. \ref{fig:branches-stiff}. We depict the lowest energy configuration on this equilibrium branch in Fig.~\ref{fig:branches-stiff} at point $A$, consisting of two simultaneously nucleated localized cracks, one inside the domain and one on the boundary. 
 
 When the loading parameter $\bar{\epsilon}_t$ is further increased, the equilibrium configuration with $n=3$ loses linear stability at point $A'$. In Fig. \ref{fig:branches-stiff} we represent state transitions according to the LEM protocol by arrows. It can be observed that under this protocol, the only available transition from point $A'$ is to the branch with $n=4$, which is locally stable within at the corresponding applied strain $\bar{\epsilon}_2$. The minimum energy configuration on the branch with $n=4$ is depicted in Fig.~\ref{fig:branches-stiff}-right at point $B$, consisting of two cracks: one inside the domain and two on the right and left boundaries.
 
@@ -177,7 +177,7 @@ The following results were obtained using the Alglib library~\cite{Bochkanov2013
     \includegraphics*[align=c,width=.45\textwidth]{../images/model_stiff_kick_profiles.png}
     \includegraphics*[align=c,width=.45\textwidth]{../images/model_compliant_kick_profiles.png}
     \caption{
-        Profiles of damage fields and perturbations showing the effect of the kick algorithm in state transitions (from unstable to stable). Branch switching events correspond to load values indicated by $\bar \epsilon_i$ with $i\in \mathbb N$ in \textcolor{blue}{Fig.~\ref{fig:tempo1} and ~\ref{fig:tempo2}}. The stiff substrate model is in the left column, the compliant substrate model on the right and  the light (orange) line indicates the unstable damage field $\alpha^*$, the eigenvector associated to the smallest eigenvalue, $p$, is displayed in green highlighting its positive and negative values. The dashed line represents the perturbed damage field  $\alpha^*+p$ used as initial guess for the state transition, the solid black line displays the solution $\alpha_t$ returned after first-order convergence.}
+        Profiles of damage fields and perturbations showing the effect of the kick algorithm in state transitions (from unstable to stable). Branch switching events correspond to load values indicated by $\bar \epsilon_i$ with $i\in \mathbb N$ in {Fig.~\ref{fig:tempo1} and ~\ref{fig:tempo2}}. The stiff substrate model is in the left column, the compliant substrate model on the right and  the light (orange) line indicates the unstable damage field $\alpha^*$, the eigenvector associated to the smallest eigenvalue, $p$, is displayed in green highlighting its positive and negative values. The dashed line represents the perturbed damage field  $\alpha^*+p$ used as initial guess for the state transition, the solid black line displays the solution $\alpha_t$ returned after first-order convergence.}
     \label{fig:kick}
 \end{figure}
 
@@ -258,11 +258,11 @@ as the initial guess, {a state transition} occurs which leads the system into a 
 The perturbad quasi-Newton minimization returns a state with two boundary cracks and one interior crack, as shown in Fig. \ref{fig:kick}(b), which corresponds to the solution found using the arc-length continuation algorithm on the branch with \(n=3\) (see Fig. \ref{fig:branches-stiff}(b), inset A).  The hybrid algorithm is also successful in capturing the next two anticipated branch   switching events: from the  branch with \(n=3\)  to the branch  with \(n=4\) (see Fig. \ref{fig:kick}(d)) and  from branch with \(n=4\)  to the branch  with \(n=5\) (see Fig. \ref{fig:kick}(f)). The hybrid algorithm is able to capture the unique path dictated by the LEM protocol shown in Fig. \ref{fig:branches-stiff}.   
 
 When the quasi-Newton algorithm is initiated using the perturbed state \(\mathbf{\tilde X^{(0)}}\) as the initial guess, {a state transition} occurs which leads the system into a qualitatively different state, cf. the final  converged solutions returned from the quasi-Newton minimization are shown in  Figs. \ref{fig:kick}. For the stiff substrate model, the {instability mode} which corresponds to the bifurcation from the trivial branch has the form \(\cos(n\pi x)\) with \(n=3\), as identified through the linear stability analysis (see Fig. \textcolor{blue}{\ref{fig:kick}(a))}. 
-The \comment[id=OUS]{typo}  \textcolor{blue}{perturbed} quasi-Newton minimization returns a state with two boundary cracks and one interior crack, as shown in Fig. \textcolor{blue}{\ref{fig:kick}(a)}, which corresponds to the solution found using the arc-length continuation algorithm on the branch with \(n=3\) (see Fig. \ref{fig:branches-stiff}(b), inset A).  The hybrid algorithm is also successful in capturing the next two anticipated branch   switching events: from the  branch with \(n=3\)  to the branch  with \(n=4\) \textcolor{blue}{(see Fig. \ref{fig:kick}(b))} and  from branch with \(n=4\)  to the branch  with \(n=5\)  \textcolor{blue}{(see Fig. \ref{fig:kick}(c))}. The hybrid algorithm is able to capture the unique path dictated by the LEM protocol shown in Fig. \ref{fig:branches-stiff}.    \comment[id=OUS]{important to add this sentence} \textcolor{blue}{We also show the evolution of the smallest eigenvalue during all loading process in Fig.~\ref{fig:tempostable}-left where  it is clear that  the solution (and the evolution as a whole) is stable.}
+The {perturbed} quasi-Newton minimization returns a state with two boundary cracks and one interior crack, as shown in Fig. \textcolor{blue}{\ref{fig:kick}(a)}, which corresponds to the solution found using the arc-length continuation algorithm on the branch with \(n=3\) (see Fig. \ref{fig:branches-stiff}(b), inset A).  The hybrid algorithm is also successful in capturing the next two anticipated branch   switching events: from the  branch with \(n=3\)  to the branch  with \(n=4\) {(see Fig. \ref{fig:kick}(b))} and  from branch with \(n=4\)  to the branch  with \(n=5\)  {(see Fig. \ref{fig:kick}(c))}. The hybrid algorithm is able to capture the unique path dictated by the LEM protocol shown in Fig. \ref{fig:branches-stiff}. {We also show the evolution of the smallest eigenvalue during all loading process in Fig.~\ref{fig:tempostable}-left where  it is clear that  the solution (and the evolution as a whole) is stable.}
 
-Let's now \comment[id={OUS}]{added} focus on the compliant substrate model. In this case, according to the LEM protocol, the path through which the system may evolve under quasi-static loading is not unique due to the multiplicity of (stable) solutions at critical loads.
+Let's now focus on the compliant substrate model. In this case, according to the LEM protocol, the path through which the system may evolve under quasi-static loading is not unique due to the multiplicity of (stable) solutions at critical loads.
 Note that this is not the case for the first model wherein there is a single equilibrium branch accessible to the system for all given critical loads.
-Despite the quasi-Newton algorithm was able to reproduce one of the possible paths predicted by the LEM protocol for the compliant substrate model,  \comment[id=OUS]{typo} \sout{the} {the branch switching events} {are delayed with respect to the} anticipated bifurcations. 
+Despite the quasi-Newton algorithm was able to reproduce one of the possible paths predicted by the LEM protocol for the compliant substrate model, {the branch switching events} {are delayed with respect to the} anticipated bifurcations. 
 
 
 The system's response under the hybrid algorithm is depicted in Fig. \ref{fig:kick2}. The first column displays the perturbed damage profiles, while the second column shows the outcomes of the energy minimization process starting from  this perturbed state. A stable state with two nucleated boundary cracks (branch \( n=2 \)) is achieved following the destabilization of the trivial branch, as illustrated in Fig. \ref{fig:kick2}(b). Subsequently, an interior crack nucleates in the middle of the system (branch \( n=4 \)), as shown in Fig. \ref{fig:kick2}(d). The third event involves a transition from branch \( n=3 \) to branch \( n=5 \). The final event depicted in Fig. \ref{fig:kick2} is the transition to branch \( n=6 \). The last event before reconnecting to the trivial branch is the transition from branch \( n=6 \) to branch \( n=7 \), the only  branch available to the system at this load. To summarize, the branches selected by the hybrid algorithm follow the sequence 
@@ -271,8 +271,6 @@ which differs from the sequence
 \( 0 \rightarrow 2 \rightarrow 3 \rightarrow 4 \rightarrow 6 \rightarrow 7 \rightarrow 0 \) 
 followed by the quasi-Newton algorithm.
 
-
- \comment[id={OUS}]{remove}\sout{Finally, we will discuss the determination of the step-size \( \eta \) used to obtain the perturbed state as the initial guess for the quasi-Newton algorithm.}
 Our numerical findings suggest that equilibria close to the Hessian degeneracy (i.e. with small but positive eigenvalues) are robust in the sense that they are insensitive to perturbations. This is highlighed by the fact that running the quasi-Newton solver on a perturbed state close to the Hessian sign transition yields, after convergence, the same equilibrium state prior to perturbation.
 On the other hand, when the smallest eigenvalue of the system's Hessian is small and negative, the
 small value of the step size \( \eta \) obtained by minimization of \eqref{eqn:energy-slice} is not sufficient for the quasi-Newton algorithm to effectively escape the flat region of the energy landscape. 
@@ -293,12 +291,11 @@ The quasi-Newton solver starting from the perturbed state seeks a direction that
 
 
 \subsection{Irreversible evolutions and stability}
-To highlight the role of irreversibility constraints on the determination of the evolution and its consequences on the space of perturbations, we discuss the full stability problem~\eqref{eq:variational_stability} in our simplified one-dimensional setting through an illustrative numerical computation. 
+To highlight the role of irreversibility constraints on the determination of the evolution and its consequences on the space of perturbations, we discuss the full stability problem Ineq.~\eqref{eq:variational_stability} in our simplified one-dimensional setting through an illustrative numerical computation. 
 
-To solve the second-order cone-constrained inequality~\eqref{eq:variational_stability}, we employ a numerical method based on the orthogonal decomposition of the Hilbert space  $H$  according to two mutually polar cones  $P$  and  $Q$\cite{Moreau1962-fz}. Given an element  $z$  in  $H$ , it can be shown that tehere exists a unique decomposition into two orthogonal components,  $x \in P$  and  $y \in Q$ , where  $x$  and  $y$  are the closest points in  $P$  and  $Q$  to  $z$ , respectively.
+To solve the second-order cone-constrained inequality~\eqref{eq:variational_stability}, we employ a numerical method based on the orthogonal decomposition of the Hilbert space  $X_0$  according to two mutually polar cones  $K^+_0$  and  $K^*$, cf. \cite{Moreau1962-fz}. Given an element  $z$  in  $X_0$ , it can be shown that there exists a unique decomposition into two orthogonal components,  $x \in K^+_0$  and  $y \in K^*$ , where  $x$  and  $y$  are the closest points in  $K^+_0$  and  $K^*$  to  $z$, respectively.
 
-When dealing with eigenvalue problems, this decomposition allows one to project the problem into the cone, ensuring that the solution remains within the constraints imposed by irreversibility. 
-This approach is particularly useful in mechanics and physics when dealing with unilateral constraints or problems where the solution space is naturally bounded by physical considerations (e.g., non-negative stress, plastic deformations, etc.) 
+This decomposition allows one to project the problem into the cone and ensure that the eigen-solution satisfies the constraints imposed by irreversibility. This approach is particularly useful in mechanics and physics when dealing with unilateral constraints or problems where the solution space is naturally bounded by physical considerations (e.g., non-negative stress, plastic deformations, etc.) 
 
 More in particular, we implement a simple iterative Scaling-and-Projection algorithm~\cite{Pinto_da_Costa2010-qv} which depends upon one numerical parameter, a scaling factor $\eta>0$. Given a convex cone  $K$ and an initial guess $z_0$ (not necessarily in the convex cone), the algorithm operates by first projecting the vector in the cone, $x^{(k=0)}= \operatorname{P_K}(z_0)$.  
 After the projection step, the current estimate for the eigenvalue can be computed using the Rayleigh quotient
@@ -309,11 +306,10 @@ where $H$ is the Hessian operator. Then, we compute the residual vector $y^{(k)}
 $v^{(k)} =\operatorname{P_K} (x^{(k)} + \eta y^{(k)})$.
 The algorithm is repeated until convergence is achieved. Note that, in the cone-constrained case, the residual vector $y^{(k)}$ need not be zero at convergence.
 
-The irreversible evolution is computed using the same parameters as in the experiment in Figure~\ref{fig:hessian1}-(a) for the rigid substrate model. ~\comment[id={OUS}]{change the label location in Fig. fig:irreversibility-profiles}In Fig.~\ref{fig:irreversibility-profiles} we plot the profiles of the fields at the loading step corresponding with the bifurcation point of the reversible system, namely $H$ in Fig.~\ref{fig:branches-stiff}.
+The irreversible evolution is computed using the same parameters as in the experiment in Figure~\ref{fig:hessian1}-(a) for the rigid substrate model. In Fig.~\ref{fig:irreversibility-profiles} we plot the profiles of the fields at the loading step corresponding with the bifurcation point of the reversible system, namely $H$ in Fig.~\ref{fig:branches-stiff}.
 
-The homogeneous damage field $\alpha_h$ and the profiles of the damage eigenfunctions associated to the minimal eigenvalue for the second order bifurcation problem~\comment[id={OUS}]{check the citation to Eq.}~\eqref{eq:variational_bifurcation} (left panel) coincide with the solutions and eigenmodes \comment[id={OUS}]{n=3}
-($n=3$) computed by Fourier series,  \comment[id={OUS}]{citation to Fig.}\textcolor{blue}{cf.~Fig~\ref{fig:kick}(a).}
-On the other hand, the eigenmode for the full nonlinear stability problem~\comment[id={OUS}]{check the citation to Eq.}~\eqref{eq:variational_stability} is plotted in the right panel.
+The homogeneous damage field $\alpha_h$ and the profiles of the damage eigenfunctions associated to the minimal eigenvalue for the second order bifurcation problem Ineq.~\eqref{eq:variational_bifurcation} (left panel) coincide with the damage solution and eigenmode ($n=3$) computed by Fourier series, {cf.~Fig~\ref{fig:kick}(a).}
+On the other hand, the eigenmode for the full nonlinear stability problem Ineq.~\eqref{eq:variational_stability} is plotted in the right panel.
 Note that the profile of the (non-negative) instability modes do not reduce to a mere truncation (i.e. a projection on the cone $K^+_0$) of the bifurcation modes, and this is due - in general - to the necessary regularity of the solutions requiring continuity of first derivatives. 
 
 % The former is determined by the smallest eigenvalue of the operator $H(y)$, which is a non-linear operator that depends on the current damage state, whereas the latter is determined by the eigenvalue problem in the vector space.
@@ -323,7 +319,7 @@ Note that the bifurcation spectrum is singular at $\bar \epsilon_t=0$ following 
 Conversely, the set of admissible damage perturbations for the stability problem changes from the empty set for the loading interval $0 < \bar\epsilon_t\leq \bar\epsilon_b$ set to the solid cone of smooth positive functions $\{\beta\in H^1((0,1)):\beta \geq 0\}$ only beyond the bifurcation load for $\bar\epsilon_t \geq \bar\epsilon_b$.
 Despite the occurrence of negative eigenvalues for the bifurcation problem, the eigenvalues of the stability problem are all positive, which is a sufficient condition to ascertain the stability (and thus, the observability) of the computed evolution.
 
-The consequences of irreversibility manifest both as a pointwise constraint, ruling out transitions between branches that would require a local decrease of damage in favour of a global decrease of energy (e.g. between $n=3$ to $n=4$, see profiles in the \comment[id={OUS}]{ref fo Fig. 6 corrected}Fig.~\ref{fig:kick} of the transition (b)$\mapsto$ (d)). 
+The consequences of irreversibility manifest both as a pointwise constraint, ruling out transitions between branches that would require a local decrease of damage in favour of a global decrease of energy (e.g. between $n=3$ to $n=4$, see profiles in the Fig.~\ref{fig:kick} of the transition (b)$\mapsto$ (d)). 
 On the other hand, irreversibility has a major role  as a global constraint on the perturbation space, by introducing a strong nonlinearity. For the current choice of parameters, this is evident in the fact that the computed evolution is qualitatively different from the unconstrained case. Despite allowing potential bifurcations, the system navigates a purely homogeneous branch, whose inf-eigenvalues that are positive indicating a sufficient condition for stability (hence observability) of the computed trajectory.
 
 \begin{figure}[htbp]
