--- a/paper/mybibliography.bib
+++ b/paper/mybibliography.bib
@@ -118,7 +118,7 @@
 	bdsk-url-1 = {https://doi.org/10.1007/s42452-020-03803-x}}
 
 
-@article{bosco:2021,
+@article{Bosco:2021,
 	abstract = {Crack channelling in a brittle, flexural bilayer, composed of a coating adhering to a substrate of finite thickness, is addressed for the case of a uniform moisture content (or temperature) variation. The linear stress profile within the coating may lead to three different fracture mechanisms, which are a channelling crack with delamination absent, a channelling crack with delamination of finite length, and a channelling crack with delamination of unbounded extent. Failure mechanism maps illustrate the dependence of the active crack channelling mechanism, and the corresponding critical crack channelling stress, upon the stiffness mismatch between the layers and upon the ratio of interfacial toughness to coating toughness. Although the results are applicable to bilayers in a wide range of applications, the study focuses on the prediction of crack channelling in historical paintings. The significance of bending of the bilayer upon crack channelling is explored by comparing the fracture characteristics of the simply-supported, flexural bilayer with those of a rigidly supported bilayer that is constrained against bending. These two bilayer systems are representative of the different framing techniques commonly used for historical paintings, with the simply-supported bilayer reflecting a regular wooden panel that can bend freely, and the rigidly supported bilayer characterizing a wooden panel that does not bend as a result of cradle additions composed of several horizontal members and corresponding orthogonal cross-pieces. Independent of the type of framing technique applied, it is shown that crack channelling with delamination can be avoided in historical paintings when the delamination toughness exceeds the mode I toughness of the paint layer. Under these conditions paint flaking does not occur and the visual appearance of the painting is preserved. The failure maps constructed in this study provide a useful tool for museum conservators to identify acceptable indoor humidity and temperature variations such that historical paintings do not degrade by a combination of crack channelling and delamination.},
 	author = {Bosco, E. and Suiker, A. S. J. and Fleck, N. A.},
 	date = {2021/04/01/},
